--- a/allocate.html
+++ b/allocate.html
@@ -15,7 +15,6 @@ body{
   flex-direction:column;
   align-items:center;
 }
-
 .card{
   background:#fff;
   width:100%;
@@ -25,50 +24,25 @@ body{
   border-radius:16px;
   box-shadow:0 15px 40px rgba(0,0,0,.25);
 }
-
 h1{font-size:15px;text-align:center;color:#203a43;margin:0;}
 h2{font-size:14px;text-align:center;color:#555;margin:6px 0 14px;}
-
-#loading{
-  text-align:center;
-  font-size:15px;
-  color:#555;
-  margin:30px 0;
-}
-
+#loading{text-align:center;font-size:15px;color:#555;margin:30px 0;}
 .countdown{
-  background:#fff8e1;
-  color:#6d4c41;
-  padding:10px;
-  border-radius:10px;
-  text-align:center;
-  font-size:14px;
-  font-weight:600;
+  background:#fff8e1;color:#6d4c41;padding:10px;
+  border-radius:10px;text-align:center;
+  font-size:14px;font-weight:600;
 }
-
 .blink{
-  text-align:center;
-  font-size:14px;
-  margin:12px 0;
+  text-align:center;font-size:14px;margin:12px 0;
   animation:blinkColors 2s infinite;
 }
-
 @keyframes blinkColors{
-  0%{color:#1abc9c;}
-  25%{color:#3498db;}
-  50%{color:#9b59b6;}
-  75%{color:#e67e22;}
+  0%{color:#1abc9c;}25%{color:#3498db;}
+  50%{color:#9b59b6;}75%{color:#e67e22;}
   100%{color:#1abc9c;}
 }
-
-#wheelWrap{
-  display:flex;
-  justify-content:center;
-  margin:18px 0;
-}
-
+#wheelWrap{display:flex;justify-content:center;margin:18px 0;}
 canvas{max-width:260px}
-
 button{
   width:100%;
   padding:12px;
@@ -79,37 +53,24 @@ button{
   cursor:pointer;
   margin-top:12px;
 }
-
-.btn-primary{
-  background:linear-gradient(135deg,#2c5364,#203a43);
+.btn-primary{background:linear-gradient(135deg,#2c5364,#203a43);color:#fff;}
+.btn-seminar{background:linear-gradient(135deg,#1565c0,#0d47a1);color:#fff;}
+.btn-logout{background:#c0392b;color:#fff;}
+.btn-close{
+  background:linear-gradient(135deg,#757575,#616161);
   color:#fff;
 }
-
-.btn-seminar{
-  background:linear-gradient(135deg,#1565c0,#0d47a1);
-  color:#fff;
+.btn-close:hover{
+  background:linear-gradient(135deg,#616161,#424242);
 }
-
-.btn-logout{
-  background:#b71c1c;
-  color:#fff;
-}
-
 button:disabled{
   background:#999;
   cursor:not-allowed;
 }
-
-.status{
-  margin-top:12px;
-  text-align:center;
-  font-size:14px;
-}
-
+.status{margin-top:12px;text-align:center;font-size:14px}
 .yellow{color:#f57f17;}
 .green{color:#1b5e20;}
 .red{color:#b71c1c;}
-
 .infoBox{
   background:#f5f7fa;
   border-radius:12px;
@@ -117,7 +78,6 @@ button:disabled{
   margin-top:16px;
   font-size:14px;
 }
-
 .footer{
   margin:12px 0 20px;
   text-align:center;
@@ -125,7 +85,7 @@ button:disabled{
   color:#e0e0e0;
 }
 
-/* ---------- MODAL ---------- */
+/* MODAL */
 .modal{
   position:fixed;
   inset:0;
@@ -134,15 +94,13 @@ button:disabled{
   justify-content:center;
   align-items:center;
 }
-
 .modal-box{
   background:#fff;
-  width:calc(100% - 40px);
+  width:calc(100% - 32px);
   max-width:420px;
   border-radius:14px;
   padding:22px;
 }
-
 textarea{
   width:100%;
   min-height:90px;
@@ -150,31 +108,15 @@ textarea{
   border-radius:8px;
   border:1px solid #ccc;
 }
-
 .instruction{
   margin-top:8px;
   font-size:13px;
   color:#b71c1c;
 }
-
 .modal-actions{
   display:flex;
   gap:10px;
   margin-top:14px;
-}
-
-/* RED CLOSE BUTTON */
-.btn-close{
-  background:linear-gradient(135deg,#e53935,#c62828);
-  color:#fff;
-}
-.btn-close:hover{
-  background:linear-gradient(135deg,#c62828,#b71c1c);
-}
-.btn-close:disabled{
-  background:#ef9a9a;
-  color:#fff;
-  cursor:not-allowed;
 }
 </style>
 </head>
@@ -204,12 +146,10 @@ textarea{
     <button id="spinBtn" class="btn-primary" onclick="spin()">Spin the Coin</button>
 
     <div id="status" class="status"></div>
-
     <div id="resultBox" class="infoBox" style="display:none"></div>
 
     <button id="seminarBtn" class="btn-seminar" onclick="openModal()">Submit / Edit Seminar Topic</button>
     <button id="logoutBtn" class="btn-logout" onclick="logout()">Logout</button>
-
   </div>
 </div>
 
@@ -218,7 +158,6 @@ textarea{
   <div>© 2026 · IIEST Shibpur</div>
 </div>
 
-<!-- SEMINAR MODAL -->
 <div class="modal" id="modal">
   <div class="modal-box">
     <h3>Seminar Topic</h3>
@@ -235,27 +174,26 @@ textarea{
 </div>
 
 <script>
-const BACKEND = "PASTE_YOUR_BACKEND_URL_HERE";
+const BACKEND = "https://script.google.com/macros/s/AKfycbzaYTDl6fJeu2hlQr5jOPkUVD8p_bVni6-q-8FlJ3HG2RlV4zo0c-5g4UDDq40Z0V7FhA/exec";
 const token = new URLSearchParams(location.search).get("token");
 
-let angle = 0;
-let spinning = false;
+let angle=0, spinning=false;
 
 /* ---------- UI LOCK ---------- */
 function disableAllActions(msg){
-  spinBtn.disabled = true;
-  seminarBtn.disabled = true;
-  logoutBtn.disabled = true;
-  status.className = "status yellow";
-  status.innerText = msg;
+  spinBtn.disabled=true;
+  seminarBtn.disabled=true;
+  logoutBtn.disabled=true;
+  status.className="status yellow";
+  status.innerText=msg;
 }
 
 /* ---------- INIT ---------- */
 drawWheel();
-loadDashboard();
+loadAll();
 
-/* ---------- DASHBOARD ---------- */
-function loadDashboard(){
+/* ---------- LOAD DATA ---------- */
+function loadAll(){
   fetch(BACKEND,{
     method:"POST",
     body:new URLSearchParams({ action:"dashboard", token })
@@ -265,10 +203,6 @@ function loadDashboard(){
     loading.style.display="none";
     content.style.display="block";
 
-    if(res.deadline){
-      startCountdown(res.deadline);
-    }
-
     if(res.status==="ASSIGNED"){
       wheelWrap.style.display="none";
       spinBtn.style.display="none";
@@ -276,35 +210,46 @@ function loadDashboard(){
       showResult(res);
     }
   });
+
+  fetch(BACKEND,{
+    method:"POST",
+    body:new URLSearchParams({ action:"getSeminarTopic", token })
+  })
+  .then(r=>r.json())
+  .then(res=>{
+    if(res.deadline) startCountdown(res.deadline);
+    if(res.topic) topicInput.value=res.topic;
+    if(!res.editable) saveBtn.disabled=true;
+  });
 }
 
 /* ---------- COUNTDOWN ---------- */
 function startCountdown(deadline){
-  const D = new Date(deadline);
+  const D=new Date(deadline);
   setInterval(()=>{
-    const d = D - new Date();
-    if(d <= 0){
-      timeLeft.innerText = "Deadline passed";
+    const d=D-new Date();
+    if(d<=0){
+      timeLeft.innerText="Deadline passed";
       spinBtn.style.display="none";
-      saveBtn.disabled = true;
+      saveBtn.disabled=true;
       return;
     }
-    const h = Math.floor(d/36e5);
-    const m = Math.floor(d%36e5/6e4);
-    const s = Math.floor(d%6e4/1e3);
-    timeLeft.innerText =
+    const h=Math.floor(d/36e5),
+          m=Math.floor(d%36e5/6e4),
+          s=Math.floor(d%6e4/1e3);
+    timeLeft.innerText=
       `${String(h).padStart(2,"0")}:${String(m).padStart(2,"0")}:${String(s).padStart(2,"0")}`;
   },1000);
 }
 
 /* ---------- WHEEL ---------- */
 function drawWheel(){
-  const c = wheel.getContext("2d");
+  const c=wheel.getContext("2d");
   c.clearRect(0,0,260,260);
   for(let i=0;i<9;i++){
     c.beginPath();
     c.moveTo(130,130);
-    c.fillStyle = i%2 ? "#90caf9" : "#bbdefb";
+    c.fillStyle=i%2?"#90caf9":"#bbdefb";
     c.arc(130,130,120,
       (i*40+angle)*Math.PI/180,
       ((i+1)*40+angle)*Math.PI/180);
@@ -315,18 +260,19 @@ function drawWheel(){
 /* ---------- SPIN ---------- */
 function spin(){
   if(spinning) return;
-  spinning = true;
-
+  spinning=true;
   disableAllActions("Allocating group topic, please wait…");
 
-  let stop = Math.random()*360 + 2160;
-  let id = setInterval(()=>{
-    angle += 20;
+  let stop=Math.random()*360+2160;
+  let id=setInterval(()=>{
+    angle+=20;
     drawWheel();
-    if(angle >= stop){
+    if(angle>=stop){
       clearInterval(id);
-      status.innerText = "Assigning topic, please wait…";
-      allocate();
+      requestAnimationFrame(()=>{
+        status.innerText="Assigning topic, please wait…";
+        allocate();
+      });
     }
   },30);
 }
@@ -348,18 +294,17 @@ function allocate(){
 
 /* ---------- RESULT ---------- */
 function showResult(res){
-  let html = `<b>Assigned Topic:</b><br>${res.projectName}<br><br><b>Group Members:</b><br>`;
+  let html=`<b>Assigned Topic:</b><br>${res.project} – ${res.projectName}<br><br><b>Group Members:</b><br>`;
   res.team.forEach((s,i)=>html+=`${i+1}. ${s.name} (${s.roll})<br>`);
   if(!res.complete){
-    html += `<div class="red" style="margin-top:8px">
+    html+=`<div class="red" style="margin-top:8px">
       A few students haven't spun the wheel yet. Please login later to see full group details.
     </div>`;
   }
-  resultBox.innerHTML = html;
-  resultBox.style.display = "block";
-
-  seminarBtn.disabled = false;
-  logoutBtn.disabled = false;
+  resultBox.innerHTML=html;
+  resultBox.style.display="block";
+  seminarBtn.disabled=false;
+  logoutBtn.disabled=false;
 }
 
 /* ---------- SEMINAR ---------- */
@@ -369,16 +314,11 @@ function openModal(){
   closeBtn.disabled=true;
   modal.style.display="flex";
 }
-
-function closeModal(){
-  modal.style.display="none";
-}
-
+function closeModal(){ modal.style.display="none"; }
 function saveTopic(){
   saveBtn.disabled=true;
   topicStatus.className="status yellow";
   topicStatus.innerText="Submitting…";
-
   fetch(BACKEND,{
     method:"POST",
     body:new URLSearchParams({
@@ -387,10 +327,13 @@ function saveTopic(){
       topic:topicInput.value
     })
   })
-  .then(()=>{
-    topicStatus.className="status green";
-    topicStatus.innerText="Saved successfully";
-    closeBtn.disabled=false;
+  .then(r=>r.json())
+  .then(res=>{
+    if(res.status==="SAVED"){
+      topicStatus.className="status green";
+      topicStatus.innerText="Saved successfully";
+      closeBtn.disabled=false;
+    }
   });
 }
 
